; ModuleID = '/home/carl/AnghaBench/openwrt/package/utils/oseama/src/extr_oseama.c_oseama_entity_append_file.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/utils/oseama/src/extr_oseama.c_oseama_entity_append_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c"Couldn't open %s\0A\00", align 1
@EACCES = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [28 x i8] c"Couldn't write %zu B to %s\0A\00", align 1
@seama_path = common dso_local global i32 0, align 4
@EIO = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i8*)* @oseama_entity_append_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @oseama_entity_append_file(i32* %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca [128 x i32], align 16
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 0, i64* %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32* @fopen(i8* %10, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %11, i32** %6, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %20, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* @stderr, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 (i32, i8*, ...) @fprintf(i32 %15, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8* %16)
  %18 = load i64, i64* @EACCES, align 8
  %19 = sub i64 0, %18
  store i64 %19, i64* %3, align 8
  br label %48

20:                                               ; preds = %2
  br label %21

21:                                               ; preds = %40, %20
  %22 = getelementptr inbounds [128 x i32], [128 x i32]* %9, i64 0, i64 0
  %23 = load i32*, i32** %6, align 8
  %24 = call i64 @fread(i32* %22, i32 1, i32 512, i32* %23)
  store i64 %24, i64* %7, align 8
  %25 = icmp ugt i64 %24, 0
  br i1 %25, label %26, label %44

26:                                               ; preds = %21
  %27 = getelementptr inbounds [128 x i32], [128 x i32]* %9, i64 0, i64 0
  %28 = load i64, i64* %7, align 8
  %29 = load i32*, i32** %4, align 8
  %30 = call i64 @fwrite(i32* %27, i32 1, i64 %28, i32* %29)
  %31 = load i64, i64* %7, align 8
  %32 = icmp ne i64 %30, %31
  br i1 %32, label %33, label %40

33:                                               ; preds = %26
  %34 = load i32, i32* @stderr, align 4
  %35 = load i64, i64* %7, align 8
  %36 = load i32, i32* @seama_path, align 4
  %37 = call i32 (i32, i8*, ...) @fprintf(i32 %34, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0), i64 %35, i32 %36)
  %38 = load i64, i64* @EIO, align 8
  %39 = sub i64 0, %38
  store i64 %39, i64* %8, align 8
  br label %44

40:                                               ; preds = %26
  %41 = load i64, i64* %7, align 8
  %42 = load i64, i64* %8, align 8
  %43 = add i64 %42, %41
  store i64 %43, i64* %8, align 8
  br label %21

44:                                               ; preds = %33, %21
  %45 = load i32*, i32** %6, align 8
  %46 = call i32 @fclose(i32* %45)
  %47 = load i64, i64* %8, align 8
  store i64 %47, i64* %3, align 8
  br label %48

48:                                               ; preds = %44, %14
  %49 = load i64, i64* %3, align 8
  ret i64 %49
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i64 @fread(i32*, i32, i32, i32*) #1

declare dso_local i64 @fwrite(i32*, i32, i64, i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
